your commit message

--- a/index.html
+++ b/index.html
@@ -304,10 +304,27 @@
     <!-- Text right -->
     <div class="text">
       <h1>Hey, I'm Jan! <span class="plus">+</span></h1>
-      <p>I'm Jan Arroyo — studying CS &amp; Business at USC. I like building products, doing design &amp; research, and creating impact with community partners.</p>
-    </div>
-  </div>
-</section>
+      <!-- Short Bio -->
+<div class="bio-intro">
+  <p>
+    I’m a senior at <b>USC</b> studying Business Administration with a minor in Artificial Intelligence Applications. 
+    I’ve developed skills in computer science, finance, data analytics, and project management, and I’ve worked on projects in 
+    <b>consulting</b>, <b>product management</b>, and <b>design research</b>.
+  </p>
+</div>
+
+<!-- Social Links -->
+<div class="social-links">
+  <a href="https://www.linkedin.com/in/YOUR-LINKEDIN" target="_blank" aria-label="LinkedIn">
+    <img src="images/linkedin-icon.svg" alt="LinkedIn">
+  </a>
+  <a href="mailto:YOUR-EMAIL@usc.edu" target="_blank" aria-label="Email">
+    <img src="images/email-icon.svg" alt="Email">
+  </a>
+  <a href="Resume.pdf" target="_blank" aria-label="Resume">
+    <img src="images/resume-icon.svg" alt="Resume">
+  </a>
+</div>
 
   <!-- ===== Work ===== -->
   <section id="work" class="section">
