--- a/index.html
+++ b/index.html
@@ -146,18 +146,24 @@
 }
 
 .quick-links{
-  display:flex; gap:14px; margin-top:14px;
+  display:flex; gap:18px; margin-top:16px;
 }
+
 .quick-links a{
   display:inline-flex; align-items:center; justify-content:center;
-  width:44px; height:44px;
-  border:1px solid var(--bd); border-radius:10px; background:#fff;
-  box-shadow:var(--shadow);
-  text-decoration:none; font-size:22px; color:#111827;
-  transition:box-shadow .2s ease, transform .15s ease, opacity .2s ease;
+  font-size:22px;
+  color:#111827;
+  text-decoration:none;
+  transition:color .2s ease, transform .15s ease, opacity .2s ease;
 }
-.quick-links a:hover{ box-shadow:var(--shadow-hover); transform:translateY(-1px); opacity:.9; }
-.quick-links a:focus{ outline:2px solid var(--accent); outline-offset:2px; }
+
+/* hover effect */
+.quick-links a:hover{
+  color:var(--accent);   /* your red accent */
+  transform:translateY(-2px);
+  opacity:.9;
+}
+
 
 
     /* ===== Sections ===== */
