--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <title>Jan Arroyo</title>
   <link href="styles.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="icon" type="image/png" href="Snoopy_Welcome.png">
+
 
   <!-- Joanna-style minimal tweaks scoped to this page -->
   <style>
