your commit message

--- a/index.html
+++ b/index.html
@@ -455,61 +455,69 @@
       </ul>
     </div>
   </section>
+<!-- ===== Involvements ===== -->
+<section id="involvements" class="section">
+  <div class="container">
+    <h2>Involvements</h2>
+    <ul class="list" aria-label="Student & community involvement">
+      <li>
+        <a class="row" href="https://www.uscbtg.org/" target="_blank" rel="noopener" aria-label="Business Technology Group (USC)">
+          <span class="left">
+            <img class="logo" src="images/BTG.JPG" alt="">
+            <span class="meta"><span class="co">Business Technology Group (USC)</span> <span class="role">VP of Projects</span></span>
+          </span>
+          <span class="right">May 2024–Present</span>
+        </a>
+      </li>
+      <li>
+        <a class="row" href="https://www.ey.com/en_us/about-us/corporate-responsibility/mentoring-of-the-future-workforce-strengthens-communities-and-careers" target="_blank" rel="noopener" aria-label="EY CMAP">
+          <span class="left">
+            <img class="logo" src="images/EY.JPG" alt="">
+            <span class="meta"><span class="co">EY CMAP</span> <span class="role">Education Strategy Consultant</span></span>
+          </span>
+          <span class="right">Apr 2023–Present</span>
+        </a>
+      </li>
+      <li>
+        <a class="row" href="https://uscfgsa.carrd.co/" target="_blank" rel="noopener" aria-label="USC First-Generation Student Center">
+          <span class="left">
+            <img class="logo" src="images/FGSA.JPG" alt="">
+            <span class="meta"><span class="co">USC First-Generation Student Center</span> <span class="role">Program Manager</span></span>
+          </span>
+          <span class="right">Sep 2023–May 2025</span>
+        </a>
+      </li>
+      <li>
+        <a class="row" href="https://www.usclbsa.com/" target="_blank" rel="noopener" aria-label="Latino Business Student Association">
+          <span class="left">
+            <img class="logo" src="images/LBSA.JPG" alt="">
+            <span class="meta"><span class="co">Latino Business Student Association</span> <span class="role">Member</span></span>
+          </span>
+          <span class="right">Sep 2023–May 2025</span>
+        </a>
+      </li>
+      <li>
+        <a class="row" href="https://www.uscisa.org/" target="_blank" rel="noopener" aria-label="International Student Assembly">
+          <span class="left">
+            <img class="logo" src="images/ISA.JPG" alt="">
+            <span class="meta"><span class="co">International Student Assembly</span> <span class="role">Advocacy &amp; Program Manager Intern</span></span>
+          </span>
+          <span class="right">Aug 2023–May 2024</span>
+        </a>
+      </li>
+      <li>
+        <a class="row" href="https://partnershipla.org/who-we-are/" target="_blank" rel="noopener" aria-label="The LA Partnership">
+          <span class="left">
+            <img class="logo" src="images/Partnership.JPG" alt="">
+            <span class="meta"><span class="co">The LA Partnership</span> <span class="role">Policy Advisory Board Member</span></span>
+          </span>
+          <span class="right">Sep 2021–Jun 2022</span>
+        </a>
+      </li>
+    </ul>
+  </div>
+</section>
 
-  <li>
-    <a class="row" href="https://www.uscbtg.org/" target="_blank" rel="noopener" aria-label="Business Technology Group (USC)">
-      <span class="left">
-        <img class="logo" src="images/BTG.JPG" alt="">
-        <span class="meta"><span class="co">Business Technology Group (USC)</span> <span class="role">VP of Projects</span></span>
-      </span>
-      <span class="right">May 2024–Present</span>
-    </a>
-  </li>
-  <li>
-    <a class="row" href="https://www.ey.com/en_us/about-us/corporate-responsibility/mentoring-of-the-future-workforce-strengthens-communities-and-careers" target="_blank" rel="noopener" aria-label="EY CMAP">
-      <span class="left">
-        <img class="logo" src="images/EY.JPG" alt="">
-        <span class="meta"><span class="co">EY CMAP</span> <span class="role">Education Strategy Consultant</span></span>
-      </span>
-      <span class="right">Apr 2023–Present</span>
-    </a>
-  </li>
-  <li>
-    <a class="row" href="https://uscfgsa.carrd.co/" target="_blank" rel="noopener" aria-label="USC First-Generation Student Center">
-      <span class="left">
-        <img class="logo" src="images/FGSA.JPG" alt="">
-        <span class="meta"><span class="co">USC First-Generation Student Center</span> <span class="role">Program Manager</span></span>
-      </span>
-      <span class="right">Sep 2023–May 2025</span>
-    </a>
-  </li>
-  <li>
-    <a class="row" href="https://www.usclbsa.com/" target="_blank" rel="noopener" aria-label="Latino Business Student Association">
-      <span class="left">
-        <img class="logo" src="images/LBSA.JPG" alt="">
-        <span class="meta"><span class="co">Latino Business Student Association</span> <span class="role">Member</span></span>
-      </span>
-      <span class="right">Sep 2023–May 2025</span>
-    </a>
-  </li>
-  <li>
-    <a class="row" href="https://www.uscisa.org/" target="_blank" rel="noopener" aria-label="International Student Assembly">
-      <span class="left">
-        <img class="logo" src="images/ISA.JPG" alt="">
-        <span class="meta"><span class="co">International Student Assembly</span> <span class="role">Advocacy &amp; Program Manager Intern</span></span>
-      </span>
-      <span class="right">Aug 2023–May 2024</span>
-    </a>
-  </li>
-  <li>
-    <a class="row" href="https://partnershipla.org/who-we-are/" target="_blank" rel="noopener" aria-label="The LA Partnership">
-      <span class="left">
-        <img class="logo" src="images/Partnership.JPG" alt="">
-        <span class="meta"><span class="co">The LA Partnership</span> <span class="role">Policy Advisory Board Member</span></span>
-      </span>
-      <span class="right">Sep 2021–Jun 2022</span>
-    </a>
-  </li>
   
 
   <!-- ===== Projects & Artifacts ===== -->
