your commit message

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
               <img class="logo" src="images/Marshall.JPG" alt="">
               <span class="meta"><span class="co">USC Marshall</span> <span class="role">Peer Career Advisor – Tech</span></span>
             </span>
-            <span class="right">Aug 2025</span>
+            <span class="right">Aug 2025-Present</span>
           </a>
         </li>
         <li>
@@ -431,7 +431,7 @@
               <img class="logo" src="images/A-World-Fit-for-Kids.JPG" alt="">
               <span class="meta"><span class="co">A World Fit For Kids</span> <span class="role">Strategy Consultant</span></span>
             </span>
-            <span class="right">2022–2023</span>
+            <span class="right">June 2022– Jan 2023</span>
           </a>
         </li>
         <li>
