--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
   <!-- ===== Projects & Artifacts ===== -->
   <section id="projects" class="section">
     <div class="container">
-      <h2>Projects &amp; Artifacts</h2>
+      <h2>Projects</h2>
 
     <!-- CRM -->
 <article class="project" id="crm-automation">
