--- a/bake.html
+++ b/bake.html
@@ -666,7 +666,7 @@ header.navbar .container{
         rank: 3,
         title:"Focaccia Bread",
         meta:"Olive oil rich • Dimpled top",
-        img1:p("Focaccia.JPG"),
+        img1:p("Foccacia.JPG"),
         ingredientsHTML: `
           <li><strong>Dough</strong>
             <ul>
